<resources>
    <string name="app_name">E-RTLH Bojonegoro</string>
    <string name="survey_baru">Survey Baru</string>
    <string name="simpan_survey">Simpan Survey</string>
    <string name="foto_dalam_rumah">Foto Dalam Rumah</string>
    <string name="foto_tampak_samping">Foto Tampak Samping Rumah</string>
    <string name="nama">Nama</string>
    <string name="fondasi">Fondasi</string>
    <string name="nik">NIK</string>
    <string name="luas_rumah">Luas Rumah (m<sup><small>2</small></sup>)</string>
    <string name="kolom">Kolom</string>
    <string name="kuda_kuda">Kuda-Kuda</string>
    <string name="nomor_kk">Nomor KK</string>
    <string name="sloof">Sloof</string>
    <string name="ring_balok">Ring Balok</string>
    <string name="lantai">Lantai</string>
    <string name="alamat_dusun_rt_rw">Alamat (Dusun, RT/RW)</string>
    <string name="dinding">Dinding</string>
    <string name="foto_tampak_depan">Foto Tampak Depan Rumah</string>
    <string name="status_penguasaan_lahan">Status penguasaan lahan</string>
    <string name="penutup_atap">Penutup Atap</string>
    <string name="titik_koordinat_latitude_longitude">Titik Koordinat (Latitude - Longitude)</string>
    <string name="biodata">Biodata</string>
    <string name="total_penghasil_per_bulan">Total Penghasil per Bulan</string>
    <string name="jumlah_penghuni_rumah">Jumlah Penghuni Rumah</string>
    <string name="jumlah_kk_dalam_1_rumah">Jumlah KK dalam 1 Rumah</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="desa_kelurahan">Desa/Kelurahan</string>
    <string name="detail_riwayat_survey">Detail Riwayat Survey</string>
    <string name="perbarui_data_survey">Perbarui Data Survey</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="ada_kondisi_baik_kokoh">Ada, Kondisi Baik, Kokoh</string>
    <string name="ada_sebagian_rapuh_tidak_kokoh">Ada, Sebagian Rapuh, Tidak Kokoh</string>
    <string name="tidak_ada_seluruhnya_rapuh">Tidak Ada, Seluruhnya Rapuh</string>
    <string name="dinding_a">Tembok/setengah tembok diplester, papan kayu berkualitas, bahan dinding dengan kondisi kokoh dan kedap air</string>
    <string name="dinding_b">Tembok kondisi sebagian besar retak, papan atau bahan lain yang kurang kokoh dan tidak kedap air</string>
    <string name="dinding_c">Anyaman bambu tipis, triplek, papan, tembok, atau bahan lain yang rapuh dan tidak kedap air</string>
    <string name="lantai_a">Plaster/Ubin/Keramik/Papan atau bahan lain dalam kondisi baik dan kedap air</string>
    <string name="lantai_b">Papan atau bahan lain dengan kondisi rusak, plester sebagian besar pecah</string>
    <string name="lantai_c">Tanah, papan atau bahan lain yang rapuh dan tidak kedap air</string>
    <string name="atap_a">Genteng/seng/spandek, bahan tradisional (ijuk/rumbia), atau bahan lain dengan kondisi baik, tidak bocor</string>
    <string name="atap_c">Asbes, bahan non asbes dengan kondisi rusak berat, sering bocor jika hujan, rawan ambruk</string>
    <string name="milik_a">milik sendiri, ada bukti sah</string>
    <string name="milik_b">sewa/pinjam pakai/izin tinggal/menumpang, ada bukti sah</string>
    <string name="milik_c">tanpa bukti sah/ilegal</string>
    <string name="atap_b">Genteng/seng/spandek, bahan tradisional (ijuk/rumbia), atau bahan lain dengan kondisi rusak sebagian, bocor jika terjadi hujan lebat</string>
    <string name="login">Login</string>
    <string name="email_password">Masukkan Email dan Kata Sandi</string>
    <string name="input_password">Kata Sandi</string>
    <string name="input_email">Email</string>
    <string name="sudah_diupload">Sudah Diupload</string>
    <string name="belum_diupload">Belum Diupload</string>
    <string name="tambah">Tambah</string>
    <string name="sync_data">Sync Data</string>
    <string name="riwayat">Riwayat</string>
    <string name="usulan_belum_terverifikasi">Usulan Belum Terverifikasi</string>
    <string name="tidak_ada_riwayat_survey">Tidak Ada Riwayat Survey</string>
    <string name="riwayat_survey">Riwayat Survey</string>
</resources>